great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
.container {
	max-width: 1024px;
	margin: 0 auto;
}

header {
	margin-top: 20px;
}

header nav {
	display: inline-block;
	width: 830px;

}

header nav a {
	margin-left: 60px;
	text-decoration: none;
	color: gray;
}

header img {
	display: inline-block;
	vertical-align: -10px;
}

section.main-section {
	margin-top: 100px;
}

section.main-section div.left-side {
	display: inline-block;
	width: 400px;
	margin-left: 100px;
	margin-bottom: 100px;
	text-align: center;	
}

section.main-section div.left-side h1 {
	font-size: 100px;
}

section.main-section img {
	display: inline-block;
	margin-left: 80px;
}

section.main-section button {
	font-size: 15px;
	padding: 5px 50px;
	background: white;
}

section.second-section {
	margin-bottom: 30px;
	padding-top: 30px;
	margin-left: 50px;
	margin-right: 50px;
	border-top: 1px solid black;
}

section.second-section div.first-column {
	display: inline-block;
	width: 450px;
	margin-right: 20px;
	/* margin-left: 50px;  */
}

section.second-section div.second-column {
	display: inline-block;
	width: 450px;
}

div.middle-image img.middle-img {
	margin-left: 60px;
}

section.third-section {
	margin: 0 50px;
	margin-bottom: 50px;
	padding-bottom: 20px;
	border-bottom: 1px solid black;
}

section.third-section div.first-column {
	display: inline-block;
	width: 280px;
	/* margin-left: 50px; */
	margin-right: 30px;
	margin-top: 30px;
}

section.third-section div.second-column {
	display: inline-block;
	width: 280px;
	margin-right: 30px;
}

section.third-section div.third-column {
	display: inline-block;
	width: 280px;
}

footer {
	margin-left: 50px;
}

footer address {
	margin-bottom: 20px;
}

footer p.number {
	display: block;
	margin-bottom: 20px;
}

footer p.email {
	display: block;
	margin-bottom: 20px;
}

footer p.copyright {
	display: block;
	margin: 80px 0;
	text-align: center;
}

